--- a/air/flx/MyOpenLaszloAirApp.mxml
+++ b/air/flx/MyOpenLaszloAirApp.mxml
@@ -7,7 +7,7 @@
         Application
         {
             background-image:"";
-            background-color:"";
+            background-color:"e5e5e5";
             background-alpha:"0.0";
         }
     </mx:Style>
