--- a/air/flx/MyOpenLaszloAirApp.mxml
+++ b/air/flx/MyOpenLaszloAirApp.mxml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <mx:Application xmlns:mx="http://www.adobe.com/2006/mxml" 
-    width="600" height="400"
+    width="620" height="420"
     styleName="plain"
     creationComplete="init()">
     <mx:Style>
         Application
         {
             background-image:"";
-            background-color:"e5e5e5";
+            background-color:"a5a525";
             background-alpha:"0.0";
         }
     </mx:Style>
